--- a/client/public/index.html
+++ b/client/public/index.html
@@ -29,6 +29,7 @@
     
   </head>
   <body>
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
