--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,6 +12,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,400,800" rel="stylesheet">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue-red.min.css" />
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <!-- <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/2.3.0/firebaseui.css" />
     <script src="https://cdn.firebase.com/libs/firebaseui/2.3.0/firebaseui.js"></script> -->
     <!--
@@ -23,11 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>FireBase Tinder Demo</title>
+    <title>GA Networking Demo</title>
     
   </head>
   <body>
-    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
